fix dimensioni card container e gap in media query breakpoint tablet

--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -10,7 +10,7 @@
     }
 
     .card-container {
-        max-width: 700px;
+        max-width: 650px;
         padding:20px 60px;
         flex-direction: row;
         justify-content: space-between;
